# Bin2Dec

./: Bin2Dec.cpp  CMakeLists.txt  main.cpp
